1017: Fix handling of wide-aligned blocks in editor

--- a/assets/src/sass/editor/_global.scss
+++ b/assets/src/sass/editor/_global.scss
@@ -3,9 +3,9 @@ body {
 	line-height: normal;
 }
 
-:root {
+.is-layout-constrained {
 	--wp--style--global--content-size: 980px;
-	--wp--style--global--wide-size: 980px;
+	--wp--style--global--wide-size: 1020px;
 }
 .post-type-post {
 	--wp--style--global--content-size: 40rem;
